Job generator now fully supports Jureca

--- a/job-script-generator/contract.in.j2
+++ b/job-script-generator/contract.in.j2
@@ -30,7 +30,7 @@ path_vdaggerv = {{ vdv_path }}
 {% endif %}
 
 # output path
-output_path = {{ rundir }}
+output_path = {{ outdir }}
 overwrite_old = yes
 
 # quarks to be used - The file at the and is the location of the perambulators.
