--- a/job-script-generator/job_script.submit.j2
+++ b/job-script-generator/job_script.submit.j2
@@ -2,7 +2,7 @@
 #SBATCH -J {{ jobname }}
 #SBATCH --time=02:00:00
 #SBATCH --nodes=1
-#SBATCH --cpus-per-task=12
+#SBATCH --cpus-per-task={{ omp_num_threads }}
 {% if email_address != '' %}
 #SBATCH --mail-user={{ email_address }}
 #SBATCH --mail-type=FAIL
@@ -15,15 +15,13 @@ module load Boost
 module load Eigen
 module load HDF5
 
-#export OMP_NUM_THREADS=${SLURM_CPUS_PER_TASK}
-export OMP_NUM_THREADS=12
+export OMP_NUM_THREADS=${SLURM_CPUS_PER_TASK}
 export KMP_AFFINITY=compact,0
+
 cd {{ rundir }}
 
 date
 
-srun -N1 -n1 -c12 --exclusive -o {{ rundir }}/contract.out ./contract -i {{ rundir }}/contract.in &
-
-wait
+srun -o {{ rundir }}/contract.out ./contract -i {{ rundir }}/contract.in 
 
 date
