--- a/job-script-generator/start_runs.sh.j2
+++ b/job-script-generator/start_runs.sh.j2
@@ -7,7 +7,13 @@ for cfg in { {{ config_start }}..{{ config_end }}..{{ config_step }} }; do
   echo "submitting conf ${cfg}"
  
     ## check whether at maximum of jobs in queue
-    while [ $(qstat -u werner | grep -v "R" | grep $name | wc -l) -gt $maxJobN ]; do
+    while [ 
+      {%- if machine == 'qbig' -%}
+      $(qstat -u ${USER} {{ ' ' }}
+      {%- elif machine  == 'jureca' -%}
+      $(squeue -u ${USER} {{ ' ' }}
+      {%- endif -%}
+      | grep -v "R" | grep $name | wc -l) -gt $maxJobN ]; do
       echo Waiting, queue is at maximum.
       sleep 30
     done
@@ -15,7 +21,11 @@ for cfg in { {{ config_start }}..{{ config_end }}..{{ config_step }} }; do
     j=`printf %04d ${cfg}`
   
     cd cnfg${j}
+    {% if machine == 'qbig' %}
     qsub job_script.pbs
+    {% elif machine == 'jureca' %}
+    sbatch job_script.submit
+    {% endif %}
     cd ../
   
 done
