--- a/job-script-generator/job_script.pbs.j2
+++ b/job-script-generator/job_script.pbs.j2
@@ -1,6 +1,6 @@
 #PBS -N {{ jobname }}
 #PBS -l walltime=48:00:00,mem=60gb
-#PBS -l nodes=1:ppn=4
+#PBS -l nodes=1:ppn={{ omp_num_threads }}
 {% if email_address != '' %}
 #PBS -M {{ email_address }}
 #PBS -m abe
@@ -9,7 +9,7 @@
 
 cd "{{ rundir }}"
 
-export OMP_NUM_THREADS=4
+export OMP_NUM_THREADS={{ omp_num_threads }}
 export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/hiskp2/werner/libraries/boost_1_60_0/stage/lib
 export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/hiskp2/knippsch/hdf5-1.8.17/lib 
 
