--- a/job-script-generator/contract.in.j2
+++ b/job-script-generator/contract.in.j2
@@ -2,7 +2,7 @@
 
 # parallelisation: Be carefull - Atm I would only use one thread for Eigen. It 
 #                                usually is much slower than simple omp!
-nb_omp_threads = {{ omp_num_threads }}
+nb_omp_threads = {{ cpus_per_task }}
 nb_eigen_threads = 1
 
 # lattice parameters:
