--- a/job-script-generator/contract.in.j2
+++ b/job-script-generator/contract.in.j2
@@ -15,16 +15,15 @@ Lz = {{ lattice_space }}
 start_config = {{ config_start }}
 end_config = {{ config_end }}
 delta_config = {{ config_step }}
+path_gaugefields = {{ path_gaugefields }}
 
 # eigenvector handling: path not neede right now
 number_of_eigen_vec = {{ ev_count }}
 {% if ev_path != '' %}
 name_eigenvectors = eigenvectors
 path_eigenvectors = {{ ev_path }}
-{%- endif -%}
-{% if vdv_path != None %}
-handling_vdaggerv = liuming
-{%- endif -%}
+{% endif -%}
+handling_vdaggerv = {{ vdv_handling }}
 {% if vdv_path != '' %}
 path_vdaggerv = {{ vdv_path }}
 {% endif %}
@@ -41,16 +40,7 @@ quark = {{ quark }}
 
 # operators to be used
 [operator_lists]
-operator_list = g5.d(2,2,2).p0
-#operator_list = g10.d0.p0,1,2,3,4
-#operator_list = g15.d0.p0,1,2,3,4
-#operator_list = g2.d0.p0,1,2,3,4
-#operator_list = g11.d0.p0,1,2,3,4
-#operator_list = g14.d0.p0,1,2,3,4
-#operator_list = g3.d0.p0,1,2,3,4
-#operator_list = g12.d0.p0,1,2,3,4
-#operator_list = g13.d0.p0,1,2,3,4
-#operator_list = g5.d0.p0,1,2,3,4
+{{ operator_list }} 
 
 # all correlation functions which will be computed
 [correlator_lists]
