--- a/job-script-generator/contract.in.j2
+++ b/job-script-generator/contract.in.j2
@@ -41,16 +41,7 @@ quark = {{ quark }}
 
 # operators to be used
 [operator_lists]
-operator_list = g1.d0.p0,1,2,3,4
-operator_list = g10.d0.p0,1,2,3,4
-operator_list = g15.d0.p0,1,2,3,4
-operator_list = g2.d0.p0,1,2,3,4
-operator_list = g11.d0.p0,1,2,3,4
-operator_list = g14.d0.p0,1,2,3,4
-operator_list = g3.d0.p0,1,2,3,4
-operator_list = g12.d0.p0,1,2,3,4
-operator_list = g13.d0.p0,1,2,3,4
-operator_list = g5.d0.p0,1,2,3,4
+{{ operator_list }}
 
 # all correlation functions which will be computed
 [correlator_lists]
