Build script for Jureca uses Lime and Intel compiler

--- a/job-script-generator/job_script_jureca.sh.j2
+++ b/job-script-generator/job_script_jureca.sh.j2
@@ -11,6 +11,7 @@
 #SBATCH --error={{ config_path }}/{{ jobname }}.err
 
 module load defaults
+module load Intel
 module load Boost
 module load Eigen
 module load HDF5
