--- a/job-script-generator/start_runs.sh.j2
+++ b/job-script-generator/start_runs.sh.j2
@@ -1,4 +1,4 @@
-#!/bin/bash
+#!/bin/bash +x
 
 for cfg in {% for config in config_ids %}{{ config }} {% endfor %}; do
   echo "submitting conf ${cfg}"
