--- a/job-script-generator/job_script_qbig_slurm.sh.j2
+++ b/job-script-generator/job_script_qbig_slurm.sh.j2
@@ -1,6 +1,6 @@
 #!/bin/bash
 #SBATCH -J {{ jobname }}
-#SBATCH --time=02:00:00
+#SBATCH --time=24:00:00
 #SBATCH --nodes=1
 #SBATCH --mem=100GB
 #SBATCH --cpus-per-task={{ cpus_per_task }}
@@ -12,6 +12,9 @@
 #SBATCH --error={{ config_path }}/{{ jobname }}.err
 
 export OMP_NUM_THREADS=${SLURM_CPUS_PER_TASK}
+
+set -e
+set -u
 
 cd {{ rundir }}
 
