Add option momentum_cutoff_0

--- a/job-script-generator/contract.in.j2
+++ b/job-script-generator/contract.in.j2
@@ -32,6 +32,8 @@ path_vdaggerv = {{ vdv_path }}
 # output path
 output_path = {{ outdir }}
 
+momentum_cutoff_0 = {{ momentum_cutoff_0 }}
+
 # quarks to be used - The file at the and is the location of the perambulators.
 [quarks]
 {% for quark in quarks -%}
