--- a/job-script-generator/contract.in.j2
+++ b/job-script-generator/contract.in.j2
@@ -34,7 +34,7 @@ output_path = {{ outdir }}
 
 momentum_cutoff_0 = {{ momentum_cutoff_0 }}
 
-# quarks to be used - The file at the and is the location of the perambulators.
+# quarks to be used - The file at the end is the location of the perambulators.
 [quarks]
 {% for quark in quarks -%}
 quark = {{ quark }}
