Fix command line arguments

--- a/job-script-generator/job_script_qbig_slurm.sh.j2
+++ b/job-script-generator/job_script_qbig_slurm.sh.j2
@@ -21,7 +21,7 @@ cd {{ rundir }}
 date
 
 {% for config_id in config_ids_for_one_job %}
-(./contract -i {{ config_path }} --config_start {{ config_id }} --config_end {{ config_id }} || exit 1) &
+(./contract -i {{ config_path }} --start_config {{ config_id }} --end_config {{ config_id }} || exit 1) &
 {% endfor %}
 
 wait
