--- a/job-script-generator/job_script_qbig_slurm.sh.j2
+++ b/job-script-generator/job_script_qbig_slurm.sh.j2
@@ -2,7 +2,7 @@
 #SBATCH -J {{ jobname }}
 #SBATCH --time=24:00:00
 #SBATCH --nodes=1
-#SBATCH --mem=100GB
+#SBATCH --mem=62GB
 #SBATCH --cpus-per-task={{ cpus_per_task }}
 {% if email_address != '' %}
 #SBATCH --mail-user={{ email_address }}
@@ -10,6 +10,7 @@
 {% endif %}
 #SBATCH --output={{ config_path }}/{{ jobname }}.out
 #SBATCH --error={{ config_path }}/{{ jobname }}.err
+#SBATCH --exclude=lcpunode01
 
 export OMP_NUM_THREADS=${SLURM_CPUS_PER_TASK}
 
