--- a/job-script-generator/job_script_jureca.sh.j2
+++ b/job-script-generator/job_script_jureca.sh.j2
@@ -28,7 +28,7 @@ date
 
 {% for config_id in config_ids_for_one_job %}
 srun -N1 -n1 -c{{ cpus_per_task }} --exclusive \
-        ./contract -i {{ config_path }} \
+        ../contract -i {{ config_path }} \
         --start_config {{ config_id }} --end_config {{ config_id }} &
 {% endfor %}
 
